# enviro

./: .env.example  .gitignore  README.md  cli  docker-compose.local.yaml  docker-compose.production.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: django.yml  docker_env.yml  templates.yml
apps/blog/: models.py
apps/blog/migrations/: 0001_initial.py  0002_replace_welcome_with_blogindex.py
apps/dashboard/: services.py  urls.py  views.py
apps/dashboard/templates/: dashboard.html
apps/env_manager/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/home/: urls.py  views.py
apps/users/: urls.py  views.py
compose/docker_env/: Dockerfile  start.sh  supervisord.conf
compose/local/: Dockerfile
compose/production/: Dockerfile
core/: celery.py  settings.py  urls.py
docs/: index.md  usage.md
docs/getting-started/: configuration.md  installation.md
docs/troubleshooting/: index.md
env_templates/c/: Dockerfile  Makefile  README.md
env_templates/csharp/: Dockerfile
env_templates/golang/: Dockerfile
env_templates/java/: Dockerfile
env_templates/javascript/: Dockerfile
env_templates/javascript-express/: Dockerfile
env_templates/javascript-nextjs/: Dockerfile  package-lock.json  package.json
env_templates/jupyter-lab/: Dockerfile
env_templates/laravel-vue/: Dockerfile
env_templates/python-flask/: Dockerfile  main.py
env_templates/rstudio/: Dockerfile
env_templates/rust/: Dockerfile
scripts/: build.sh  install_tailwind.sh
static/css/: input.css
templates/: base.html  blog_base.html
templates/account/: email.html  login.html  signup.html
templates/partials/: footer.html  navbar.html  settings_sidebar.html
templates/socialaccount/: connections.html
(+59 files in other folders)
