[project]
name = "enviro"
version = "0.1.0"
description = "A platform for managing and using containerized dev environments."
authors = [
    {name = "ExoticOnix",email = "mshapirovskyy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-allauth (>=65.8.1,<66.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "watchfiles (>=1.0.5,<2.0.0)",
    "django-htmx (>=1.23.0,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.14,<10.0.0)",
    "django-ratelimit (>=4.1.0,<5.0.0)",
    "django-redis (>=6.0.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
